# prompt-contextify

./: .gitignore  LICENSE  README.md  bloomscape_contextified.md  example_this_project.md  llm_contextify.md  pyproject.toml
prompt_contextify/: __init__.py  main.py  reader.py
