[build-system]
# Keep tools needed to BUILD the package here
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contextify"
version = "1.1"
description = "A tool to flatten project context for LLMs"
readme = "README.md"
requires-python = ">=3.7"

# ADD THIS SECTION
dependencies = [
    "pathspec",
]

[project.scripts]
contextify = "prompt_contextify.main:main"